--- a/Location Aware/Info.plist
+++ b/Location Aware/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>I don&apos;t need</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>I love you</string>
 </dict>
 </plist>
